--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: url('css/background.png') no-repeat center center fixed;
+    background: url('/css/background.png') no-repeat center center fixed; /* path absolut */
     background-size: cover;
     color: #333;
 }
